<resources>

    <!-- Utilizar secciones -->
    <!-- Ordenar secciones A - Z -->

    <!-- App -->
    <string name="app_name">GrowSome</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_backcancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_user">User</string>
    <string name="field_category">Category</string>
    <string name="field_name">Name</string>
    <string name="field_amount">Amount</string>
    <string name="field_desc">Description</string>
    <string name="field_cost">Cost</string>
    <string name="field_date">Date</string>
    <string name="field_color">Color</string>

    <!-- Activity Login -->
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="label_login">Sign in with your email and password!</string>

    <!-- Activity Main -->
    <string name="title_activity_main">Main</string>

    <!-- Activity Register  -->
    <string name="title_activity_register">Register</string>

    <!-- Fragment Home -->
    <string name="title_fragment_home">Home</string>

    <!-- Fragments Gastos -->
    <string name="title_fragment_gastos">Expenses</string>
    <string name="gastos_type">Type of expense</string>

    <!-- Fragments Ingresos -->
    <string name="title_fragment_ingresos">Incomes</string>
    <string name="ingresos_type">Type of income</string>

    <!-- Fragments Categorias -->
    <string name="title_fragment_categorias">Categories</string>

    <!-- Errors -->
    <string name="error_bad_url">Url broken</string>
    <string name="error_no_data">No data from server</string>
    <string name="error_no_internet">No internet</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_invalid_email">The email address is invalid</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_invalid_name">The name is invalid</string>
    <string name="error_default">Ups! Something went wrong</string>
    <string name="error_repeated_category">Category name already used</string>
    <string name="error_bad_input">Wrong data entered</string>
    <string name="error_without_category">You must have a category</string>

    <!-- Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Activity Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- example for vega class -->
    <string-array name="stores">
        <item>Cambridge</item>
        <item>Sebastopol</item>
        <item>Harvard</item>
        <item>High School</item>
        <item>Google</item>
        <item>Apple</item>
        <item>Pie</item>
    </string-array>

    <string-array name="dummy">
        <item>Work</item>
        <item>Greenapsis</item>
        <item>Practice</item>
        <item>Dummy</item>
        <item>University</item>
        <item>Microsoft</item>
        <item>Tesla</item>
        <item>Stuff</item>
    </string-array>
    <string-array name="spinner_ingresosType">
        <item>Salary</item>
        <item>Pay</item>
    </string-array>

    <string name="quantity">Quantity</string>
    <string name="valueupdate">Updated!</string>


</resources>
