<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.growsome.growsome.Ingresos.IngresosReadFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/scroll_ingresos_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ingresos_add_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresos_type"
                style="@style/InputLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_subject_black_24dp"/>

                <TextView
                    android:id="@+id/ingresos_tipos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_category"
                style="@style/InputLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="4dp"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_folder_black_24dp"/>

                <TextView
                    android:id="@+id/ingresos_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_face_black_24dp"
                    android:drawablePadding="2dp"
                    android:hint="@string/field_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="none"
                    android:editable="false"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_monto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_attach_money_black"
                    android:drawablePadding="2dp"
                    android:hint="@string/field_amount"
                    android:inputType="none"
                    android:editable="false"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description_black_24dp"
                    android:drawablePadding="2dp"
                    android:hint="@string/field_desc"
                    android:inputType="none"
                    android:editable="false"
                    android:maxLines="3" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>
