<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.growsome.growsome.Categorias.CategoriaAddFragment">

    <ScrollView
        android:id="@+id/scroll_categorias_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/categorias_add_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/categorias_add_field_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_face_black_24dp"
                    android:drawablePadding="2dp"
                    android:hint="@string/field_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/categorias_add_field_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description_black_24dp"
                    android:drawablePadding="2dp"
                    android:hint="@string/field_desc"
                    android:inputType="text"
                    android:maxLines="3" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/categorias_add_btnSave"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_add"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
