<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.growsome.growsome.Categorias.CategoriasEditFragment">
    <ScrollView
        android:id="@+id/scroll_categorias_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/categorias_add_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/categorias_field_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_chevron_right_black_24dp"
                    android:drawablePadding="2dp"
                    android:hint="@string/field_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/categorias_field_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description_black_24dp"
                    android:drawablePadding="2dp"
                    android:hint="@string/field_desc"
                    android:inputType="text"
                    android:maxLines="6" />

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/categorias_field_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/field_color"
                        android:textSize="18sp"
                        android:paddingLeft="4dp"
                        android:drawableStart="@drawable/ic_color_lens_black_24dp"
                        android:drawablePadding="2dp"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        android:id="@+id/categorias_image"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/colorAccent" />

                </RelativeLayout>

            </FrameLayout>

            <Button
                android:id="@+id/categorias_btnSave"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/action_update"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
