<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="xyz.growsome.growsome.Main">

    <!-- Action bar -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />



    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_action_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="#60000000"
        fab:menu_labels_position="left">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_ingresos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attach_money_black"
            fab:fab_size="mini"
            fab:fab_label="@string/title_fragment_ingresos"
            tools:ignore="VectorDrawableCompat" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_gastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_money_off_black"
            fab:fab_size="mini"
            fab:fab_label="@string/title_fragment_gastos"
            tools:ignore="VectorDrawableCompat" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_folder_black_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/title_fragment_categorias"
            tools:ignore="VectorDrawableCompat" />

    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>

<!--
    Solo como nota:
    El layout no se puede renderear correctemante en design porque ocurre un conflicto entre
    el FloatingActionButton de la 'libreria com.android.support:design:25.3.0'
    con la libreria 'com.github.clans:fab:1.6.4'
-->